# fastline

./: .gitignore  README.md  pyproject.toml
src/workspace/: cli.py  f1_analyze.py  f1_logger.py  f1_sim.py  recorder.py
src/workspace/web/: app.py
src/workspace/web/templates/: index.html
tests/: test_cli.py  test_f1.py
