[project]
name = "workspace"
version = "0.1.0"
description = "A Python project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
workspace = "workspace.cli:main"
f1-logger = "workspace.f1_logger:main"
f1-analyze = "workspace.f1_analyze:main"
f1-sim = "workspace.f1_sim:main"
f1-web = "workspace.web.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"workspace.web" = ["templates/*.html"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
