[project]
name = "workspace"
version = "0.1.0"
description = "A Python project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
workspace = "workspace.cli:main"
f1-logger = "workspace.f1_logger:main"
f1-analyze = "workspace.f1_analyze:main"
f1-sim = "workspace.f1_sim:main"
f1-web = "workspace.web.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"workspace.web" = ["templates/*.html"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# pycodestyle (E/W), pyflakes (F), mccabe complexity (C901), and pylint
# size limits (too-many branches/args/statements) at conventional thresholds.
select = ["E", "F", "W", "C901", "PLR0912", "PLR0913", "PLR0915"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-statements = 50

[tool.pytest.ini_options]
testpaths = ["tests"]
